// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SettingsCategoryForm Component should render a new SettingsCategoryForm form 1`] = `
<div>
  <form
    class="cds--form form-0-2-3 form-react"
    novalidate=""
  >
    <div
      class=""
      id="name-wrapper"
      name="subform-1"
    >
      <div>
        <h3>
          Category Information
        </h3>
      </div>
      <div
        class="cds--form-item settings_category_name cds--text-input-wrapper"
      >
        <div
          class="cds--text-input__label-wrapper"
        >
          <label
            class="cds--label"
            dir="auto"
            for="name"
          >
            <span
              aria-hidden="true"
              class="ddorg__carbon-component-mapper_is-required isRequired-0-2-5"
            >
              *
            </span>
            Name
          </label>
        </div>
        <div
          class="cds--text-input__field-outer-wrapper"
        >
          <div
            class="cds--text-input__field-wrapper"
          >
            <input
              class="cds--text-input"
              id="name"
              maxlength="50"
              name="name"
              type="text"
              value=""
            />
            
            <span
              aria-atomic="true"
              aria-live="assertive"
              class="cds--text-input__counter-alert"
              role="alert"
            />
          </div>
        </div>
      </div>
      <div
        class="cds--form-item cds--text-input-wrapper"
      >
        <div
          class="cds--text-input__label-wrapper"
        >
          <label
            class="cds--label"
            dir="auto"
            for="description"
          >
            <span
              aria-hidden="true"
              class="ddorg__carbon-component-mapper_is-required isRequired-0-2-5"
            >
              *
            </span>
            Description
          </label>
        </div>
        <div
          class="cds--text-input__field-outer-wrapper"
        >
          <div
            class="cds--text-input__field-wrapper"
          >
            <input
              class="cds--text-input"
              id="description"
              maxlength="150"
              name="description"
              type="text"
              value=""
            />
            
            <span
              aria-atomic="true"
              aria-live="assertive"
              class="cds--text-input__counter-alert"
              role="alert"
            />
          </div>
        </div>
      </div>
      <div
        class="cds--form-item cds--text-input-wrapper"
      >
        <div
          class="cds--text-input__label-wrapper"
        >
          <label
            class="cds--label"
            dir="auto"
            for="example_text"
          >
            <span
              aria-hidden="true"
              class="ddorg__carbon-component-mapper_is-required isRequired-0-2-5"
            >
              *
            </span>
            Long Description
          </label>
        </div>
        <div
          class="cds--text-input__field-outer-wrapper"
        >
          <div
            class="cds--text-input__field-wrapper"
          >
            <input
              class="cds--text-input"
              id="example_text"
              maxlength="150"
              name="example_text"
              type="text"
              value=""
            />
            
            <span
              aria-atomic="true"
              aria-live="assertive"
              class="cds--text-input__counter-alert"
              role="alert"
            />
          </div>
        </div>
      </div>
      <div>
        <div
          class="cds--toggle"
        >
          <button
            aria-checked="false"
            aria-labelledby="show_label"
            class="cds--toggle__button"
            id="show"
            maxlength="50"
            role="switch"
            type="button"
          />
          <label
            class="cds--toggle__label"
            for="show"
            id="show_label"
          >
            <span
              class="cds--toggle__label-text"
              dir="auto"
            >
              Show in console
            </span>
            <div
              class="cds--toggle__appearance"
            >
              <div
                class="cds--toggle__switch"
              />
              <span
                aria-hidden="true"
                class="cds--toggle__text"
                dir="auto"
              >
                No
              </span>
            </div>
          </label>
        </div>
      </div>
      <div>
        <div
          class="cds--toggle settings_category_single_value"
        >
          <button
            aria-checked="false"
            aria-labelledby="single_value_label"
            class="cds--toggle__button"
            id="single_value"
            maxlength="50"
            role="switch"
            type="button"
          />
          <label
            class="cds--toggle__label"
            for="single_value"
            id="single_value_label"
          >
            <span
              class="cds--toggle__label-text"
              dir="auto"
            >
              Single value
            </span>
            <div
              class="cds--toggle__appearance"
            >
              <div
                class="cds--toggle__switch"
              />
              <span
                aria-hidden="true"
                class="cds--toggle__text"
                dir="auto"
              >
                No
              </span>
            </div>
          </label>
        </div>
      </div>
      <div>
        <div
          class="cds--toggle"
        >
          <button
            aria-checked="false"
            aria-labelledby="perf_by_tag_label"
            class="cds--toggle__button"
            id="perf_by_tag"
            maxlength="50"
            role="switch"
            type="button"
          />
          <label
            class="cds--toggle__label"
            for="perf_by_tag"
            id="perf_by_tag_label"
          >
            <span
              class="cds--toggle__label-text"
              dir="auto"
            >
              Capture C & U Data by Tag
            </span>
            <div
              class="cds--toggle__appearance"
            >
              <div
                class="cds--toggle__switch"
              />
              <span
                aria-hidden="true"
                class="cds--toggle__text"
                dir="auto"
              >
                No
              </span>
            </div>
          </label>
        </div>
      </div>
      <p
        name="plain-text-component"
      >
        * Name and Single Value fields cannot be edited after adding a category.
      </p>
    </div>
    <div
      class="cds--btn-set"
    >
      <button
        class="cds--btn cds--btn--primary cds--btn--disabled"
        disabled=""
        type="submit"
        variant="primary"
      >
        Add
      </button>
      <button
        class="cds--btn cds--btn--secondary"
        type="button"
      >
        Cancel
      </button>
    </div>
  </form>
</div>
`;

exports[`SettingsCategoryForm Component should render edit SettingsCategoryForm 1`] = `
<div>
  <form
    class="cds--form form-0-2-3 form-react"
    novalidate=""
  >
    <div
      class=""
      id="name-wrapper"
      name="subform-1"
    >
      <div>
        <h3>
          Category Information
        </h3>
      </div>
      <div
        class="cds--form-item settings_category_name cds--text-input-wrapper"
      >
        <div
          class="cds--text-input__label-wrapper"
        >
          <label
            class="cds--label cds--label--disabled"
            dir="auto"
            for="name"
          >
            <span
              aria-hidden="true"
              class="ddorg__carbon-component-mapper_is-required isRequired-0-2-5"
            >
              *
            </span>
            Name
          </label>
        </div>
        <div
          class="cds--text-input__field-outer-wrapper"
        >
          <div
            class="cds--text-input__field-wrapper"
          >
            <input
              class="cds--text-input"
              disabled=""
              id="name"
              maxlength="50"
              name="name"
              type="text"
              value=""
            />
            
            <span
              aria-atomic="true"
              aria-live="assertive"
              class="cds--text-input__counter-alert"
              role="alert"
            />
          </div>
        </div>
      </div>
      <div
        class="cds--form-item cds--text-input-wrapper"
      >
        <div
          class="cds--text-input__label-wrapper"
        >
          <label
            class="cds--label"
            dir="auto"
            for="description"
          >
            <span
              aria-hidden="true"
              class="ddorg__carbon-component-mapper_is-required isRequired-0-2-5"
            >
              *
            </span>
            Description
          </label>
        </div>
        <div
          class="cds--text-input__field-outer-wrapper"
        >
          <div
            class="cds--text-input__field-wrapper"
          >
            <input
              class="cds--text-input"
              id="description"
              maxlength="150"
              name="description"
              type="text"
              value=""
            />
            
            <span
              aria-atomic="true"
              aria-live="assertive"
              class="cds--text-input__counter-alert"
              role="alert"
            />
          </div>
        </div>
      </div>
      <div
        class="cds--form-item cds--text-input-wrapper"
      >
        <div
          class="cds--text-input__label-wrapper"
        >
          <label
            class="cds--label"
            dir="auto"
            for="example_text"
          >
            <span
              aria-hidden="true"
              class="ddorg__carbon-component-mapper_is-required isRequired-0-2-5"
            >
              *
            </span>
            Long Description
          </label>
        </div>
        <div
          class="cds--text-input__field-outer-wrapper"
        >
          <div
            class="cds--text-input__field-wrapper"
          >
            <input
              class="cds--text-input"
              id="example_text"
              maxlength="150"
              name="example_text"
              type="text"
              value=""
            />
            
            <span
              aria-atomic="true"
              aria-live="assertive"
              class="cds--text-input__counter-alert"
              role="alert"
            />
          </div>
        </div>
      </div>
      <div>
        <div
          class="cds--toggle"
        >
          <button
            aria-checked="false"
            aria-labelledby="show_label"
            class="cds--toggle__button"
            id="show"
            maxlength="50"
            role="switch"
            type="button"
          />
          <label
            class="cds--toggle__label"
            for="show"
            id="show_label"
          >
            <span
              class="cds--toggle__label-text"
              dir="auto"
            >
              Show in console
            </span>
            <div
              class="cds--toggle__appearance"
            >
              <div
                class="cds--toggle__switch"
              />
              <span
                aria-hidden="true"
                class="cds--toggle__text"
                dir="auto"
              >
                No
              </span>
            </div>
          </label>
        </div>
      </div>
      <div>
        <div
          class="cds--toggle cds--toggle--disabled settings_category_single_value"
        >
          <button
            aria-checked="false"
            aria-labelledby="single_value_label"
            class="cds--toggle__button"
            disabled=""
            id="single_value"
            maxlength="50"
            role="switch"
            type="button"
          />
          <label
            class="cds--toggle__label"
            for="single_value"
            id="single_value_label"
          >
            <span
              class="cds--toggle__label-text"
              dir="auto"
            >
              Single value
            </span>
            <div
              class="cds--toggle__appearance"
            >
              <div
                class="cds--toggle__switch"
              />
              <span
                aria-hidden="true"
                class="cds--toggle__text"
                dir="auto"
              >
                No
              </span>
            </div>
          </label>
        </div>
      </div>
      <div>
        <div
          class="cds--toggle"
        >
          <button
            aria-checked="false"
            aria-labelledby="perf_by_tag_label"
            class="cds--toggle__button"
            id="perf_by_tag"
            maxlength="50"
            role="switch"
            type="button"
          />
          <label
            class="cds--toggle__label"
            for="perf_by_tag"
            id="perf_by_tag_label"
          >
            <span
              class="cds--toggle__label-text"
              dir="auto"
            >
              Capture C & U Data by Tag
            </span>
            <div
              class="cds--toggle__appearance"
            >
              <div
                class="cds--toggle__switch"
              />
              <span
                aria-hidden="true"
                class="cds--toggle__text"
                dir="auto"
              >
                No
              </span>
            </div>
          </label>
        </div>
      </div>
      <p
        name="plain-text-component"
      >
        * Name and Single Value fields cannot be edited after adding a category.
      </p>
    </div>
    <div
      class="cds--btn-set"
    >
      <button
        class="cds--btn cds--btn--primary cds--btn--disabled"
        disabled=""
        type="submit"
        variant="primary"
      >
        Save
      </button>
      <button
        class="cds--btn cds--btn--secondary cds--btn--disabled"
        disabled=""
        type="button"
      >
        Reset
      </button>
      <button
        class="cds--btn cds--btn--secondary"
        type="button"
      >
        Cancel
      </button>
    </div>
  </form>
</div>
`;
